// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Deep Parameters Link deep tool output to deep tool input 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "top-workflow",
  "inputs": [],
  "outputs": [],
  "steps": [
    {
      "id": "swa",
      "in": [],
      "out": [
        "tool-a.fileOut",
      ],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "swa",
        "inputs": [],
        "outputs": [
          {
            "id": "tool-a.fileOut",
            "outputSource": "tool-a/fileOut",
            "type": "File",
          },
        ],
        "steps": [
          {
            "id": "tool-a",
            "in": [],
            "out": [
              "fileOut",
            ],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-a",
              "inputs": [],
              "outputs": [
                {
                  "id": "fileOut",
                  "type": "File",
                },
              ],
            },
          },
        ],
      },
    },
    {
      "id": "swb",
      "in": [
        {
          "id": "tool-b-deep.fileIn",
          "source": "swa/tool-a.fileOut",
        },
      ],
      "out": [],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "swb",
        "inputs": [
          {
            "id": "tool-b-deep.fileIn",
            "type": "File",
          },
        ],
        "outputs": [],
        "steps": [
          {
            "id": "tool-b-deep",
            "in": [
              {
                "id": "fileIn",
                "source": "tool-b-deep.fileIn",
              },
            ],
            "out": [],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-b-deep",
              "inputs": [
                {
                  "id": "fileIn",
                  "type": "File",
                },
              ],
              "outputs": [],
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`Reference Deep Parameters Link deep tool output to other upper tool and workflow output. 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "top-workflow",
  "inputs": [],
  "outputs": [
    {
      "id": "workflowOutputFile",
      "outputSource": "swa/tool-a.fileOut",
      "type": "File",
    },
  ],
  "steps": [
    {
      "id": "swa",
      "in": [],
      "out": [
        "tool-a.fileOut",
      ],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "swa",
        "inputs": [],
        "outputs": [
          {
            "id": "tool-a.fileOut",
            "outputSource": "tool-a/fileOut",
            "type": "File",
          },
        ],
        "steps": [
          {
            "id": "tool-a",
            "in": [],
            "out": [
              "fileOut",
            ],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-a",
              "inputs": [],
              "outputs": [
                {
                  "id": "fileOut",
                  "type": "File",
                },
              ],
            },
          },
        ],
      },
    },
    {
      "id": "tb",
      "in": [
        {
          "id": "fileIn",
          "source": "swa/tool-a.fileOut",
        },
      ],
      "out": [],
      "run": {
        "class": "CommandLineTool",
        "cwlVersion": "v1.2",
        "id": "tb",
        "inputs": [
          {
            "id": "fileIn",
            "type": "File",
          },
        ],
        "outputs": [],
      },
    },
  ],
}
`;

exports[`Reference Deep Parameters Link tool input to pick the first available value between deep tool output and workflow input 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "top-workflow",
  "inputs": [
    {
      "id": "workflowInputFile",
      "type": "File",
    },
  ],
  "outputs": [],
  "steps": [
    {
      "id": "swa",
      "in": [],
      "out": [
        "tool-a.fileOut",
      ],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "swa",
        "inputs": [],
        "outputs": [
          {
            "id": "tool-a.fileOut",
            "outputSource": "tool-a/fileOut",
            "type": "File",
          },
        ],
        "steps": [
          {
            "id": "tool-a",
            "in": [],
            "out": [
              "fileOut",
            ],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-a",
              "inputs": [],
              "outputs": [
                {
                  "id": "fileOut",
                  "type": "File",
                },
              ],
            },
          },
        ],
      },
    },
    {
      "id": "tb",
      "in": [
        {
          "id": "fileIn",
          "pickValue": "first_non_null",
          "source": [
            "swa/tool-a.fileOut",
            "workflowInputFile",
          ],
        },
      ],
      "out": [],
      "run": {
        "class": "CommandLineTool",
        "cwlVersion": "v1.2",
        "id": "tb",
        "inputs": [
          {
            "id": "fileIn",
            "type": "File",
          },
        ],
        "outputs": [],
      },
    },
  ],
}
`;

exports[`Reference Deep Parameters Link top tool output to deep tool input 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "my-simple-workflow",
  "inputs": [],
  "outputs": [],
  "steps": [
    {
      "id": "tool-a-top",
      "in": [],
      "out": [
        "fileOut",
      ],
      "run": {
        "class": "CommandLineTool",
        "cwlVersion": "v1.2",
        "id": "tool-a-top",
        "inputs": [],
        "outputs": [
          {
            "id": "fileOut",
            "type": "File",
          },
        ],
      },
    },
    {
      "id": "my-simple-workflow-b",
      "in": [
        {
          "id": "tool-b-deep.fileIn",
          "source": "tool-a-top/fileOut",
        },
      ],
      "out": [],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "my-simple-workflow-b",
        "inputs": [
          {
            "id": "tool-b-deep.fileIn",
            "type": "File",
          },
        ],
        "outputs": [],
        "steps": [
          {
            "id": "tool-b-deep",
            "in": [
              {
                "id": "fileIn",
                "source": "tool-b-deep.fileIn",
              },
            ],
            "out": [],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-b-deep",
              "inputs": [
                {
                  "id": "fileIn",
                  "type": "File",
                },
              ],
              "outputs": [],
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`Reference Deep Parameters Link top workflow input all the way into a deep Tool input, creating intermediate workflow input. 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "my-simple-workflow",
  "inputs": [
    {
      "id": "workflowInputFile",
      "type": "File",
    },
  ],
  "outputs": [],
  "steps": [
    {
      "id": "my-simple-workflow-b",
      "in": [
        {
          "id": "tool-b.fileIn",
          "source": "workflowInputFile",
        },
      ],
      "out": [],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "my-simple-workflow-b",
        "inputs": [
          {
            "id": "tool-b.fileIn",
            "type": "File",
          },
        ],
        "outputs": [],
        "steps": [
          {
            "id": "tool-b",
            "in": [
              {
                "id": "fileIn",
                "source": "tool-b.fileIn",
              },
            ],
            "out": [],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-b",
              "inputs": [
                {
                  "id": "fileIn",
                  "type": "File",
                },
              ],
              "outputs": [],
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`Reference Deep Parameters Link workflow output from deep tool output 1`] = `
{
  "class": "Workflow",
  "cwlVersion": "v1.2",
  "id": "top-workflow",
  "inputs": [],
  "outputs": [
    {
      "id": "workflowOutputFile",
      "outputSource": "swa/tool-a.fileOut",
      "type": "File",
    },
  ],
  "steps": [
    {
      "id": "swa",
      "in": [],
      "out": [
        "tool-a.fileOut",
      ],
      "run": {
        "class": "Workflow",
        "cwlVersion": "v1.2",
        "id": "swa",
        "inputs": [],
        "outputs": [
          {
            "id": "tool-a.fileOut",
            "outputSource": "tool-a/fileOut",
            "type": "File",
          },
        ],
        "steps": [
          {
            "id": "tool-a",
            "in": [],
            "out": [
              "fileOut",
            ],
            "run": {
              "class": "CommandLineTool",
              "cwlVersion": "v1.2",
              "id": "tool-a",
              "inputs": [],
              "outputs": [
                {
                  "id": "fileOut",
                  "type": "File",
                },
              ],
            },
          },
        ],
      },
    },
  ],
}
`;
